tests/ui/conditional-compilation/cfg_accessible-unstable.stderr
error[E0658]: use of unstable library feature 'cfg_accessible': `cfg_accessible` is not fully implemented
  --> $DIR/cfg_accessible-unstable.rs:1:3
   |
LL | #[cfg_accessible(std)]
   |   ^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/crablang/crablang/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
